task: tenta esclarecer serviços de aplicação

--- a/src/MeuPonto.Web/Pages/Contratos/Criar.cshtml
+++ b/src/MeuPonto.Web/Pages/Contratos/Criar.cshtml
@@ -32,52 +32,52 @@
 
 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 <div class="row mb-3">
-    <label asp-for="Contrato.Nome" class="col-sm-3 col-form-label"></label>
+    <label asp-for="AberturaContrato.Nome" class="col-sm-3 col-form-label"></label>
     <div class="col-sm-9">
-        <input asp-for="Contrato.Nome" class="form-control" />
-        <span asp-validation-for="Contrato.Nome" class="text-danger"></span>
+        <input asp-for="AberturaContrato.Nome" class="form-control" />
+        <span asp-validation-for="AberturaContrato.Nome" class="text-danger"></span>
     </div>
 </div>
 <div class="row mb-3">
     <div class="col-sm-9 offset-sm-3">
         <div class="form-check">
-            <input type="checkbox" asp-for="Contrato.Ativo" class="form-check-input" />
-            <label asp-for="Contrato.Ativo" class="form-check-label"></label>
+            <input type="checkbox" asp-for="AberturaContrato.Ativo" class="form-check-input" />
+            <label asp-for="AberturaContrato.Ativo" class="form-check-label"></label>
         </div>
-        <span asp-validation-for="Contrato.Ativo" class="text-danger"></span>
+        <span asp-validation-for="AberturaContrato.Ativo" class="text-danger"></span>
     </div>
 </div>
 <div class="row mb-3">
-    <label asp-for="Contrato.EmpregadorId" class="col-sm-3 col-form-label"></label>
+    <label asp-for="AberturaContrato.EmpregadorId" class="col-sm-3 col-form-label"></label>
     <div class="col-sm-9">
-        <select asp-for="Contrato.EmpregadorId" class="form-select" asp-items="ViewBag.EmpregadorId"></select>
-        <span asp-validation-for="Contrato.EmpregadorId" class="text-danger"></span>
+        <select asp-for="AberturaContrato.EmpregadorId" class="form-select" asp-items="ViewBag.EmpregadorId"></select>
+        <span asp-validation-for="AberturaContrato.EmpregadorId" class="text-danger"></span>
     </div>
 </div>
 <div class="card mb-3">
     <div class="card-header">
-        @Html.DisplayNameFor(model => model.Contrato.JornadaTrabalhoSemanalPrevista)
+        @Html.DisplayNameFor(model => model.AberturaContrato.JornadaTrabalhoSemanalPrevista)
     </div>
     <div class="card-body">
         <div class="accordion mb-3" id="accordionJornadaTrabalhoSemanalPrevista">
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSemana" aria-expanded="true" aria-controls="collapseSemana">
-                        @Html.DisplayNameFor(model => model.Contrato.JornadaTrabalhoSemanalPrevista.Semana)
+                        @Html.DisplayNameFor(model => model.AberturaContrato.JornadaTrabalhoSemanalPrevista.Semana)
                     </button>
                 </h2>
                 <div id="collapseSemana" class="accordion-collapse collapse show" data-bs-parent="#accordionJornadaTrabalhoSemanalPrevista">
                     <div class="accordion-body">
-                        @for (int i = 0; i < Model.Contrato.JornadaTrabalhoSemanalPrevista.Semana.Count; i++)
+                        @for (int i = 0; i < Model.AberturaContrato.JornadaTrabalhoSemanalPrevista.Semana.Count; i++)
                         {
-                            <input asp-for="Contrato.JornadaTrabalhoSemanalPrevista.Semana[i].DiaSemana" type="hidden" />
+                            <input asp-for="AberturaContrato.JornadaTrabalhoSemanalPrevista.Semana[i].DiaSemana" type="hidden" />
                             <div class="row mb-3">
-                                <label asp-for="Contrato.JornadaTrabalhoSemanalPrevista.Semana[i].Tempo" class="col-sm-3 col-form-label">
-                                    @Model.Contrato.JornadaTrabalhoSemanalPrevista.Semana[i].DiaSemana.Translate()
+                                <label asp-for="AberturaContrato.JornadaTrabalhoSemanalPrevista.Semana[i].Tempo" class="col-sm-3 col-form-label">
+                                    @Model.AberturaContrato.JornadaTrabalhoSemanalPrevista.Semana[i].DiaSemana.Translate()
                                 </label>
                                 <div class="col-sm-9">
-                                    <input asp-for="Contrato.JornadaTrabalhoSemanalPrevista.Semana[i].Tempo" class="form-control" />
-                                    <span asp-validation-for="Contrato.JornadaTrabalhoSemanalPrevista.Semana[i].Tempo" class="text-danger"></span>
+                                    <input asp-for="AberturaContrato.JornadaTrabalhoSemanalPrevista.Semana[i].Tempo" class="form-control" />
+                                    <span asp-validation-for="AberturaContrato.JornadaTrabalhoSemanalPrevista.Semana[i].Tempo" class="text-danger"></span>
                                 </div>
                             </div>
                         }
@@ -90,10 +90,10 @@
             Totalizar
         </button>
         <div class="row">
-            <label asp-for="Contrato.JornadaTrabalhoSemanalPrevista.TempoTotal" class="col-sm-3 col-form-label"></label>
+            <label asp-for="AberturaContrato.JornadaTrabalhoSemanalPrevista.TempoTotal" class="col-sm-3 col-form-label"></label>
             <div class="col-sm-9">
                 <div class="input-group">
-                    <input value="@String.Format(new TimeSpanFormatter(), "{0:hhh\\:mm}", Model.Contrato.JornadaTrabalhoSemanalPrevista.TempoTotal)" class="form-control" disabled />
+                    <input value="@String.Format(new TimeSpanFormatter(), "{0:hhh\\:mm}", Model.AberturaContrato.JornadaTrabalhoSemanalPrevista.TempoTotal)" class="form-control" disabled />
                     <button class="btn btn-outline-secondary" name="command" value="RecalcularTempoTotal">Recalcular</button>
                 </div>
             </div>
