--- a/src/MeuPonto.Web/Pages/Shared/_Layout.cshtml
+++ b/src/MeuPonto.Web/Pages/Shared/_Layout.cshtml
@@ -67,6 +67,9 @@
                     {
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
+                                <a class="nav-link @Html.ActiveClass("/Folhas")" asp-page="/Folhas/Index">Folhas</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link @Html.ActiveClass("/Pontos")" asp-page="/Pontos/Index">Pontos</a>
                             </li>
                             <li class="nav-item">
