--- a/src/MeuPonto.Web/Pages/Folhas/Index.cshtml
+++ b/src/MeuPonto.Web/Pages/Folhas/Index.cshtml
@@ -2,14 +2,13 @@
 @model MeuPonto.Pages.Pontos.Folhas.IndexModel
 
 @{
-    ViewData["Title"] = "Folhas de Ponto";
+    ViewData["Title"] = "Gestão de Folha";
 }
 
 @section Breadcrumb {
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a asp-page="/Index"><i class="bi bi-house"></i></a></li>
-            <li class="breadcrumb-item"><a asp-page="/Pontos/Index">Pontos</a></li>
             <li class="breadcrumb-item active" aria-current="page">Folhas</li>
         </ol>
     </nav>
