--- a/src/MeuPonto.Web/Pages/Contratos/Empregadores/Excluir.cshtml
+++ b/src/MeuPonto.Web/Pages/Contratos/Empregadores/Excluir.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model MeuPonto.Pages.Empregadores.ExcluirModel
+@model MeuPonto.Pages.Contratos.Empregadores.ExcluirModel
 
 @{
     ViewData["Title"] = "Excluir Empregador";
@@ -9,6 +9,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a asp-page="/Index"><i class="bi bi-house"></i></a></li>
+            <li class="breadcrumb-item"><a asp-page="/Contratos/Index">Contratos</a></li>
             <li class="breadcrumb-item"><a asp-page="./Index">Empregadores</a></li>
             <li class="breadcrumb-item active" aria-current="page">Excluir</li>
         </ol>
