--- a/src/MeuPonto.Web/Pages/Trabalhadores/Index.cshtml
+++ b/src/MeuPonto.Web/Pages/Trabalhadores/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@page
-using System.ComponentModel;
-@using Billing.Models;
+@using System.ComponentModel;
 @using Billing.Models;
 
 @model MeuPonto.Pages.Trabalhadores.IndexModel
