--- a/src/MeuPonto.Desktop/Pages/Pontos/RegistroPontosWindow.xaml
+++ b/src/MeuPonto.Desktop/Pages/Pontos/RegistroPontosWindow.xaml
@@ -2,11 +2,11 @@
     x:Class="MeuPonto.Pages.Pontos.RegistroPontosWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:contratos="clr-namespace:MeuPonto.Pages.Contratos;assembly=MeuPonto.DocumentModel"
+    xmlns:contratos="clr-namespace:Timesheet.Models.Contratos;assembly=Timesheet.DocumentModel"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:MeuPonto.Pages.Pontos"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:pontos="clr-namespace:MeuPonto.Pages.Pontos;assembly=MeuPonto.DocumentModel"
+    xmlns:pontos="clr-namespace:Timesheet.Models.Pontos;assembly=Timesheet.DocumentModel"
     xmlns:system="clr-namespace:System;assembly=System.Xaml.Extensions"
     Title="Registro de Pontos"
     Width="1200"
@@ -88,7 +88,7 @@
                         <DataGridComboBoxColumn
                             Width="150"
                             DisplayMemberPath="Nome"
-                            Header="Tipo"
+                            Header="Contrato"
                             ItemsSource="{Binding Source={StaticResource contratosViewSource}, Mode=OneWay}"
                             SelectedValueBinding="{Binding ContratoId}"
                             SelectedValuePath="Id" />
